# usefull

./: .gitignore  CLAUDE.md  README.md  TASKS.md  pyproject.toml
tests/: __init__.py  test_collections.py  test_numeric.py  test_text.py  test_validation.py
usefull/: __init__.py  collections.py  numeric.py  text.py  validation.py
