[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usefull"
version = "0.1.0"
description = "A collection of useful utility functions"
readme = "README.md"
license = {text = "Unlicense"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["utilities", "helpers", "tools"]

[project.urls]
Homepage = "https://github.com/netkeep80/usefull"
Issues = "https://github.com/netkeep80/usefull/issues"

[tool.setuptools.packages.find]
include = ["usefull*"]
